# BTC_project

./: .chart_cache_Antminer S19 Pro_1538_0_06.json  .chart_cache_Antminer S21 XP_1371_0_06.json  .env.example  .gitignore  .replit  APPLICATION_RUNNING.md  APP_INTRODUCTION.md  ARCHITECTURE.md  BENCHMARK_WHITEPAPER_EN.html  BENCHMARK_WHITEPAPER_EN.md  CODE_LOCK_SUMMARY.md  CRM_LEAD_DETAIL_NaN_FIX_SUMMARY.md  CRM_ROUTING_FIX_SUMMARY.md  CRM_TEST_SUMMARY.txt  DATABASE_FIX_GUIDE.md  DATABASE_MIGRATION_SUCCESS.md  DATA_SOURCE_RELIABILITY_EN.html  DATA_SOURCE_RELIABILITY_EN.md  DB_POWER_MANAGEMENT_README.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  ENTERPRISE_DELIVERY_REPORT.md  EXECUTIVE_ONE_PAGER_EN.html  EXECUTIVE_ONE_PAGER_EN.md  GET_FROM_REPLIT.md  HOW_TO_GET_FROM_REPLIT.md  HashInsight_Product_Introduction_EN.pptx  HashInsight_产品介绍.pptx  HashInsight_产品介绍_简版_CN.pptx  MINER_DATABASE_DOCUMENTATION.md  MODULAR_MIGRATION_GUIDE.md  Makefile  NAVIGATION_CONFIG_USAGE.md  NAVIGATION_SYSTEM_SUMMARY.md  OPERATIONS_MANUAL.html  OPERATIONS_MANUAL.md  OPERATIONS_MANUAL_EN.html  OPERATIONS_MANUAL_EN.md  PACKAGE_DOWNLOAD_INFO.md  (+594 more)
agent/: agent_config.ini.example  miner_agent.py  secure_miner_agent.py
alembic/: env.py
analytics/: roi_heatmap_generator.py
analytics_dashboard_files/: README.md
api/: ab_api.py  ai_auto_execution_api.py  ai_closedloop_api.py  ai_feature_api.py  auth.ts  collector_api.py  control_plane_api.py  credential_protection_api.py  crm_integration_api.py  device_api.py  hi_api.py  legacy_adapter.py  portal_lite_api.py  remote_control_api.py  scan_api.py  server.ts  skills_api.py  telemetry_api.py  treasury_execute_api.py  web3_sla_api.py
architecture/: README.md  architecture-overview.md  data-flow.md  database-schema.md  device_envelope_encryption.md  external-integrations.md  module-guide.md  system-architecture.md
attached_assets/: New Text Document_1759642617982.txt  Pasted--1-coinwarz-api-py-CoinWar-1755825269162_1755825269162.txt  Pasted--1-control-plane-api-py-v1--1769470238877_1769470238878.txt  Pasted--20-KMS-HSM-MASTER-KEY-B64-KMS-E-1759095770329_1759095770330.txt  Pasted--67d7ab323107-Pull-complete-386cd7b21069-Extracting--17_1765933677765.txt  Pasted--A-1755754873481_1755754873481.txt  Pasted--A-Regime-Aware-MA-52W-ATR--1755755966952_1755755966953.txt  Pasted--APP-HashInsight-Antminer-S21-S19-T--1760303890540_1760303890540.txt  Pasted--ASIC-Power-Hashrate-Temperature-1--1763247592659_1763247592660.txt  Pasted--Adapters-modules-miner-adapters-antminer-ts-Implement-HTTP-JSON-RPC-compatible-with-BMmi-1762022750168_1762022750168.txt  Pasted--CN-MLOps-SRE-ai-alert-diagnosis-service-py-2000--17705_1770589786506.txt  Pasted--CRM-SaaS-Node-TypeScript-Postgres-React-CRM-HashInsi-1759805869152_1759805869152.txt  Pasted--Cloud-Edge-Collector-Remote-Control-v1-1-Cloud-Collect_1768709633036.txt  Pasted--Control-Plane-Replit-Cloud-100MW--1767583374955_1767583374955.txt  Pasted--Control-Plane-Replit-Cloud-100MW--1767585062592_1767585062592.txt  Pasted--Executive-Summary-Bitcoin-Calculator-calc-hashinsight-net--1756693710743_1756693710744.txt  Pasted--Flask-Bootstrap-BTC-Market-Intel-Flask-Analytics--1771_1771209081253.txt  (+75 more)
audit/: __init__.py  (+1 more)
(+1107 files in other folders)
