[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.40",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "notion-client>=2.3.0",
    "pytz>=2025.2",
    "schedule>=1.2.2",
]
