[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.40",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "notion-client>=2.3.0",
    "pytz>=2025.2",
    "schedule>=1.2.2",
    "flask-dance>=7.1.0",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "websocket-client>=1.8.0",
    "websocket>=0.2.1",
    "sendgrid>=6.12.4",
    "slack-sdk>=3.35.0",
    "scikit-learn>=1.7.0",
    "wkhtmltopdf>=0.2",
    "reportlab>=4.4.2",
    "python-pptx>=1.0.2",
    "jinja2>=3.1.6",
    "plotly>=6.2.0",
    "statsmodels>=0.14.4",
    "gitpython>=3.1.44",
    "stripe>=12.4.0",
]
